examples are now in a decent state

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "Ioannes",
         "losslessly",
-        "Pininfarina"
+        "Orphanotrophos",
+        "Paphlagonian",
+        "Pininfarina",
+        "Souri's"
     ]
 }
