--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "includ",
         "Ioannes",
         "losslessly",
         "Orphanotrophos",
         "Paphlagonian",
         "Pininfarina",
-        "Souri's"
+        "Souri's",
+        "unstar"
     ]
 }
