--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,14 @@
     "cSpell.words": [
         "includ",
         "Ioannes",
+        "Linköping",
         "losslessly",
         "Orphanotrophos",
         "Paphlagonian",
         "Pininfarina",
         "Souri's",
+        "termgraph",
+        "topgraph",
         "unstar"
     ]
 }
