--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "Orphanotrophos",
         "Paphlagonian",
         "Pininfarina",
+        "Quattro",
         "Souri's",
+        "Suzie",
         "termgraph",
         "topgraph",
         "unstar"
